Fix gap between copy and link on Gallery page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,8 +61,7 @@ header {
 
 #menu a,
 footer a,
-.social-icon,
-footer h3 {
+.social-icon {
     text-decoration: none;
     color: white;
     font-family: 'Rubik', sans-serif;
@@ -71,6 +70,20 @@ footer h3 {
 }
 
 
+footer h3 {
+    text-decoration: none;
+    color: white;
+    font-family: 'Rubik', sans-serif;
+    font-size: 25px;
+    font-weight: 100;
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+#hello {
+    margin: 0;
+}
 
 footer h6 {
     color: white;
@@ -978,5 +991,5 @@ For Hi-Res Laptops @media (max-width:1280px){}*/
         text-align: justify;
     }
 
-    
+
 }
